[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/blank.png" type="Texture" id=1]
[ext_resource path="res://Components/Preview.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/pixelgrass.png" type="Texture" id=3]
[ext_resource path="res://Textures/speckle.png" type="Texture" id=4]
[ext_resource path="res://Textures/checker.png" type="Texture" id=5]
[ext_resource path="res://Components/TextureSelect.gd" type="Script" id=6]
[ext_resource path="res://Textures/stripes.png" type="Texture" id=7]
[ext_resource path="res://Textures/test_squares.png" type="Texture" id=8]
[ext_resource path="res://UIAssetts/SmallHeaders.tres" type="DynamicFont" id=9]

[node name="TextureChoosePopup" type="PopupPanel"]
visible = true
anchor_left = 1.09
anchor_top = -0.028
anchor_right = 1.09
anchor_bottom = -0.028
margin_left = -2093.8
margin_top = 28.24
margin_right = -1401.8
margin_bottom = 1083.24
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 0.994
anchor_bottom = 0.992
margin_left = 4.0
margin_top = 4.0
margin_right = 0.151978
margin_bottom = 4.44006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 684.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 9 )
text = "Recent"
align = 1

[node name="Default" type="GridContainer" parent="VBox"]
margin_top = 28.0
margin_right = 684.0
margin_bottom = 92.0
size_flags_horizontal = 3
columns = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="T1" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="T2" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )

[node name="T3" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0

[node name="T4" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )

[node name="T5" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )

[node name="T6" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )

[node name="T7" parent="VBox/Default" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
texture_normal = ExtResource( 8 )

[node name="Recent" type="GridContainer" parent="VBox"]
margin_top = 96.0
margin_right = 684.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 130 )
size_flags_horizontal = 3
columns = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 230.0
margin_right = 684.0
margin_bottom = 234.0

[node name="TopBar" type="HBoxContainer" parent="VBox"]
margin_top = 238.0
margin_right = 684.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLabel" type="Label" parent="VBox/TopBar"]
margin_right = 590.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "From Path ..."

[node name="Button" type="Button" parent="VBox/TopBar"]
margin_left = 594.0
margin_right = 684.0
margin_bottom = 24.0
text = "Change Path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLabel2" type="Label" parent="VBox"]
margin_top = 266.0
margin_right = 684.0
margin_bottom = 280.0
text = "No .PNG files were found in that file path."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="GridContainer" parent="VBox"]
margin_top = 284.0
margin_right = 684.0
margin_bottom = 1023.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBar" type="HBoxContainer" parent="VBox"]
margin_top = 1027.0
margin_right = 684.0
margin_bottom = 1047.0
alignment = 1

[node name="Button" type="Button" parent="VBox/ButtonBar"]
margin_left = 321.0
margin_right = 363.0
margin_bottom = 20.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerPopups" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FileDialog" type="FileDialog" parent="InnerPopups"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 104.904
margin_top = 211.022
margin_right = 949.904
margin_bottom = 744.022
rect_min_size = Vector2( 300, 105 )
window_title = "Open File(s)"
mode = 1
access = 2
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="textureSelected" from="VBox/Default/T1" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T2" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T3" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T4" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T5" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T6" to="." method="_on_textureSelected"]
[connection signal="textureSelected" from="VBox/Default/T7" to="." method="_on_textureSelected"]
[connection signal="pressed" from="VBox/TopBar/Button" to="." method="_on_ChangePath_pressed"]
